Successfully added Play Page and Puzzle Icons

--- a/src/app/pages/tabs-page/tabs-page.html
+++ b/src/app/pages/tabs-page/tabs-page.html
@@ -1,9 +1,14 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="schedule">
-      <ion-icon name="calendar"></ion-icon>
-      <ion-label>Schedule</ion-label>
+    <ion-tab-button tab="puzzles">
+      <ion-icon name="extension-puzzle-sharp"></ion-icon>
+      <ion-label>My <i class="mdi mdi-puzzle-star:">Puzzles</i></ion-label>
+    </ion-tab-button>
+    
+    <ion-tab-button tab="play">
+      <ion-icon name="game-controller-sharp"></ion-icon>
+      <ion-label>Play Game</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="speakers">
