--- a/src/app/play/play.page.html
+++ b/src/app/play/play.page.html
@@ -1,5 +1,8 @@
-<ion-header>
+<ion-header translucent="true">
   <ion-toolbar>
+    <ion-buttons *ngIf="!showSearchbar" slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Play a Puzzle</ion-title>
   </ion-toolbar>
 </ion-header>
