--- a/src/app/play/play.page.html
+++ b/src/app/play/play.page.html
@@ -8,5 +8,35 @@
 </ion-header>
 
 <ion-content>
+  <a id="logo" target="_blank" href="http://www.wdisseny.com/puzzle/"><svg width="32" height="32" viewBox="0 0 120 120"><title>Home</title><path d="M0 15 l 20 90 l 20 0 l 20 -60 l 20 60 l 20 0 l20 -90 l -20 0 l-10 60 l -20 -60 l-20 0 l -20 60 l -10 -60 z" fill="dodgerBlue"></path><circle id="punt" cx="35" cy="15" r="12" fill="magenta"></circle></svg></a><h1>Puzzle maker <span>1.0</span></h1><div id="seeModel" >see model</div> <div id="fullscreen" class="fullscreen" ></div><input id="modelsButton" type="button" value="Models"><input id="start" type="button" value="Start">
+  <div id="tap"><div id="models"></div></div>
+<div style="margin-left: 10px">Drag to place.<br>
+Double click to rotate.</div>
+<div id="container" ></div>
+<div id="time" ></div>
 
+<svg id="base" width="0" height="0" >
+<defs>
+  <filter id="g0">
+    <feOffset result="offOut" in="SourceAlpha" dx="4" dy="4" />
+    <feGaussianBlur result="blurOut" in="offOut" stdDeviation="5" />
+    <feBlend in="SourceGraphic" in2="blurOut" mode="normal" />
+  </filter>
+   <filter id="g1">
+    <feOffset result="offOut" in="SourceAlpha" dx="4" dy="-4" />
+    <feGaussianBlur result="blurOut" in="offOut" stdDeviation="5" />
+    <feBlend in="SourceGraphic" in2="blurOut" mode="normal" />
+  </filter>   
+  <filter id="g2">
+    <feOffset result="offOut" in="SourceAlpha" dx="-4" dy="-4" />
+    <feGaussianBlur result="blurOut" in="offOut" stdDeviation="5" />
+    <feBlend in="SourceGraphic" in2="blurOut" mode="normal" />
+  </filter>
+  <filter id="g3">
+    <feOffset result="offOut" in="SourceAlpha" dx="-4" dy="4" />
+    <feGaussianBlur result="blurOut" in="offOut" stdDeviation="5" />
+    <feBlend in="SourceGraphic" in2="blurOut" mode="normal" />
+  </filter>	
+</defs>
+</svg>
 </ion-content>
