After Online Puzzles Before turning map to rewards

--- a/src/app/pages/puzzles/puzzles.html
+++ b/src/app/pages/puzzles/puzzles.html
@@ -11,7 +11,7 @@
         Favorites
       </ion-segment-button>
     </ion-segment>
-    <ion-title *ngIf="!ios && !showSearchbar">Puzzles</ion-title>
+    <ion-title *ngIf="!ios && !showSearchbar">Free Public Puzzles</ion-title>
     <ion-searchbar *ngIf="showSearchbar" showCancelButton="always" [(ngModel)]="queryText" (ionChange)="updatePuzzles()" (ionCancel)="showSearchbar = false" placeholder="Search"></ion-searchbar>
     <ion-buttons slot="end">
       <ion-button *ngIf="!ios && !showSearchbar" (click)="showSearchbar = true">
@@ -40,7 +40,7 @@
 <ion-content fullscreen="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Puzzles</ion-title>
+      <ion-title size="large">Free Public Puzzles</ion-title>
     </ion-toolbar>
     <ion-toolbar>
       <ion-searchbar [(ngModel)]="queryText" (ionChange)="updatePuzzles()" placeholder="Search"></ion-searchbar>
