--- a/src/app/pages/tabs-page/tabs-page.html
+++ b/src/app/pages/tabs-page/tabs-page.html
@@ -2,8 +2,8 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="puzzles">
-      <ion-icon name="extension-puzzle-sharp"></ion-icon>
-      <ion-label>My <i class="mdi mdi-puzzle-star:">Puzzles</i></ion-label>
+      <ion-icon name="images-outline-sharp"></ion-icon>
+      <ion-label>Online Puzzles</ion-label>
     </ion-tab-button>
     
     <ion-tab-button tab="play">
@@ -11,13 +11,13 @@
       <ion-label>Play Game</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="speakers">
-      <ion-icon name="people"></ion-icon>
-      <ion-label>Speakers</ion-label>
+    <ion-tab-button tab="mypuzzles">
+      <ion-icon name="extension-puzzle-sharp"></ion-icon>
+      <ion-label>My Puzzles</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="map">
-      <ion-icon name="location"></ion-icon>
+      <ion-icon name="diamond-sharp"></ion-icon>
       <ion-label>Map</ion-label>
     </ion-tab-button>
 
