--- a/src/app/pages/mypuzzles-detail/mypuzzles-detail.html
+++ b/src/app/pages/mypuzzles-detail/mypuzzles-detail.html
@@ -1,31 +1,31 @@
-<ion-content class="speaker-detail">
+<ion-content class="mypuzzles-detail">
   <ion-header class="ion-no-border">
     <ion-toolbar>
       <ion-buttons slot="start">
-        <ion-back-button defaultHref="/app/tabs/speakers"></ion-back-button>
+        <ion-back-button defaultHref="/app/tabs/mypuzzles"></ion-back-button>
       </ion-buttons>
-      <ion-buttons *ngIf="speaker" slot="end">
-        <ion-button (click)="openContact(speaker)">
+      <ion-buttons *ngIf="mypuzzles" slot="end">
+        <ion-button (click)="openContact(mypuzzles)">
           <ion-icon slot="icon-only" ios="call-outline" md="call-sharp"></ion-icon>
         </ion-button>
-        <ion-button (click)="openSpeakerShare(speaker)">
+        <ion-button (click)="openMyPuzzlesShare(mypuzzles)">
           <ion-icon slot="icon-only" ios="share-outline" md="share-sharp"></ion-icon>
         </ion-button>
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
 
-  <div class="speaker-background">
-    <img [src]="speaker?.profilePic" [alt]="speaker?.name">
-    <h2>{{speaker?.name}}</h2>
+  <div class="mypuzzles-background">
+    <img [src]="mypuzzles?.profilePic" [alt]="mypuzzles?.name">
+    <h2>{{mypuzzles?.name}}</h2>
   </div>
 
-  <div class="ion-padding speaker-detail">
-    <p>{{speaker?.about}} Say hello on social media!</p>
+  <div class="ion-padding mypuzzles-detail">
+    <p>{{mypuzzles?.about}} Say hello on social media!</p>
 
     <hr>
 
-    <ion-chip color="twitter" button (click)="openExternalUrl('https://twitter.com/' + speaker.twitter)">
+    <ion-chip color="twitter" button (click)="openExternalUrl('https://twitter.com/' + mypuzzles.twitter)">
       <ion-icon name="logo-twitter"></ion-icon>
       <ion-label>Twitter</ion-label>
     </ion-chip>
