--- a/src/app/pages/mypuzzles-detail/mypuzzles-detail.scss
+++ b/src/app/pages/mypuzzles-detail/mypuzzles-detail.scss
@@ -1,5 +1,5 @@
 /*
- * Speaker Background
+ * Mypuzzles Background
  */
 
 ion-toolbar {
@@ -19,7 +19,7 @@ ion-toolbar ion-menu-button {
   --color: white;
 }
 
-.speaker-background {
+.mypuzzles-background {
   position: relative;
 
   display: flex;
@@ -33,16 +33,16 @@ ion-toolbar ion-menu-button {
 
   height: calc(250px + var(--ion-safe-area-top));
 
-  background: center / cover url(/assets/img/speaker-background.png) no-repeat;
+  background: center / cover url(/assets/img/mypuzzles-background.png) no-repeat;
 }
 
-.speaker-background img {
+.mypuzzles-background img {
   width: 70px;
   border-radius: 50%;
   margin-top: calc(-1 * var(--ion-safe-area-top));
 }
 
-.speaker-background h2 {
+.mypuzzles-background h2 {
   position: absolute;
 
   bottom: 10px;
@@ -50,24 +50,24 @@ ion-toolbar ion-menu-button {
   color: white;
 }
 
-.md .speaker-background {
+.md .mypuzzles-background {
   box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 1px -2px, rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
 }
 
-.ios .speaker-background {
+.ios .mypuzzles-background {
   box-shadow: rgba(0, 0, 0, 0.12) 0px 4px 16px;
 }
 
 /*
- * Speaker Details
+ * Mypuzzles Details
  */
 
-.speaker-detail p {
+.mypuzzles-detail p {
   margin-left: 6px;
   margin-right: 6px;
 }
 
-.speaker-detail hr {
+.mypuzzles-detail hr {
   margin-top: 20px;
   margin-bottom: 20px;
 
