--- a/src/app/pages/tabs-page/tabs-page.html
+++ b/src/app/pages/tabs-page/tabs-page.html
@@ -2,7 +2,7 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="puzzles">
-      <ion-icon name="images-outline-sharp"></ion-icon>
+      <ion-icon name="images-sharp"></ion-icon>
       <ion-label>Online Puzzles</ion-label>
     </ion-tab-button>
     
@@ -16,14 +16,14 @@
       <ion-label>My Puzzles</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="map">
+    <ion-tab-button tab="rewards">
       <ion-icon name="diamond-sharp"></ion-icon>
-      <ion-label>Map</ion-label>
+      <ion-label>Rewards</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="about">
-      <ion-icon name="information-circle"></ion-icon>
-      <ion-label>About</ion-label>
+      <ion-icon name="hammer-sharp"></ion-icon>
+      <ion-label>Create Puzzle</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
