--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -28,6 +28,8 @@
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
+  --ion-background-color: #ffffff;
+  --ion-background-color-rgb: 255,255,255;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
